# sonos-ctl-overlay

./: .gitignore  README.md  pyproject.toml
sonos_overlay/: __init__.py  __main__.py  config.py  main.py
