[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonos-ctl-overlay"
version = "1.0.0"
description = "macOS-style overlay for Sonos speaker control"
authors = [{ name = "Nils Stein", email = "github.nstein@mailbox.org" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["sonos", "overlay", "volume", "control", "macos", "karabiner"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "soco>=0.30.0",
    "PyYAML>=6.0",
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-CoreText>=9.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
sonos-ctl-overlay = "sonos_overlay.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/sonos-ctl-overlay"
Repository = "https://github.com/yourusername/sonos-ctl-overlay"
Issues = "https://github.com/yourusername/sonos-ctl-overlay/issues"

[tool.setuptools]
packages = ["sonos_overlay"]

[tool.setuptools.package-data]
sonos_overlay = ["*.otf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
